fix de body request en dispositivo and niveles services
